--- a/qcom-metadata.dts
+++ b/qcom-metadata.dts
@@ -51,6 +51,14 @@
 		qcs9100v2 {
 			msm-id = <0x0000029b 0x20>;
 		};
+
+		sa8775p {
+			msm-id = <0x00000215 0x10>;
+		};
+
+		sa8775p {
+			msm-id = <0x00000215 0x20>;
+		};
 	};
 
 	soc-sku {
