--- a/qcom-metadata.dts
+++ b/qcom-metadata.dts
@@ -32,6 +32,10 @@
 			msm-id = <0x000002a8 0x11>;
 		};
 
+		qcs5430 {
+			msm-id = <0x0000023f 0x10>;
+		};
+
 		qcs6490 {
 			msm-id = <0x000001f2 0x10>;
 		};
