--- a/qcom-metadata.dts
+++ b/qcom-metadata.dts
@@ -20,6 +20,10 @@
 			msm-id = <0x000002c5 0x21>;
 		};
 
+		purwa {
+			msm-id = <0x000002c7 0x10>;
+		};
+
 		qcm6490 {
 			msm-id = <0x000001f1 0x10>;
 		};
